@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.fashiontv.com" version="1.0.2" name="Fashion TV Player" provider-name="Twilight0">
+<addon id="plugin.video.fashiontv.com" version="1.0.3" name="Fashion TV Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="2.6.1" />
+		<import addon="script.module.tulip" version="2.6.10" />
 		<import addon="plugin.video.youtube" version="6.8.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -20,7 +20,10 @@
 		<source>https://github.com/Twilight0/plugin.video.fashiontv.com</source>
 		<website>https://www.fashiontv.com/</website>
 		<size>228454</size>
-		<news>[B]1.0.2[/B]
+		<news>[B]1.0.3[/B]
+- Added FTV news channel
+
+[B]1.0.2[/B]
 - Re-addition of previously unsupported streams
 - Properly check for stream m3u8/mpd and dash activation
 
