@@ -1,3 +1,6 @@
+[B]1.0.3[/B]
+- Added FTV news channel
+
 [B]1.0.2[/B]
 - Re-addition of previously unsupported streams
 - Properly check for stream m3u8/mpd and dash activation
